--- a/source/assets/css/default.css
+++ b/source/assets/css/default.css
@@ -47,8 +47,8 @@
     --hero-bg-color: #111117;
     --footer-brand-height: 80px;
 
-    --primary-color: #058283;
-    --secondary-color: #00a6a6;
+    --primary-color: #18407A;
+    --secondary-color: #1C4984;
     
     --white-color: #ffffff;
     --black-color: #000007;
@@ -91,7 +91,7 @@
     z-index: 2;
     padding: 10px 25px;
     background-color: var(--primary-color);
-    border-radius: 4px;
+    border-radius: 20px;
     border: 1px solid;
     border-color: var(--primary-color);
     color: var(--primary-b-color);
@@ -113,7 +113,7 @@
     z-index: 2;
     padding: 10px 25px;
     background-color: transparent;
-    border-radius: 4px;
+    border-radius: 20px;
     border: 1px solid;
     border-color: var(--primary-color);
     color: var(--primary-color);
