--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -978,6 +978,44 @@ aside {
     list-style: none;
 }
 
+.lang {
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #1f4880;
+    display: flex;
+    gap: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.lang img {
+    width: 30px; /* Ajusta el tamaño según sea necesario */
+    height: auto;
+    cursor: pointer;
+}
+
+.lang a {
+    display: block;
+    position: relative;
+}
+
+.lang a.lang_active::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -5px; /* Ajusta según el espaciado que necesites */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%; /* Ajusta el ancho de la barra según sea necesario */
+    height: 3px; /* Ajusta el grosor de la barra según sea necesario */
+    background-color: #1f4880; /* Color de la barra */
+    border-radius: 2px;
+}
+
+
 .list-group .list-group-item .icon {
     color: var(--primary-color);
     margin-right: 15px;
